# pontos-turisticos

./: .example.secret.toml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.py  manage.py  pyproject.toml  requirements.txt  settings.toml
apps/atracoes/: apps.py  models.py
apps/atracoes/api/: serializers.py  viewsets.py
apps/atracoes/migrations/: 0001_initial.py  0002_atracao_foto.py
apps/avaliacoes/: apps.py
apps/avaliacoes/api/: serializers.py  viewsets.py
apps/avaliacoes/migrations/: 0001_initial.py  0002_rename_user_avaliacao_usuario.py
apps/comentarios/api/: serializers.py  viewsets.py
apps/comentarios/migrations/: 0001_initial.py
apps/core/: admin.py  models.py
apps/core/api/: serializers.py  viewsets.py
apps/core/migrations/: 0001_initial.py  0002_pontoturistico_atracoes.py  0003_pontoturistico_comentarios.py  0004_pontoturistico_avaliacoes.py  0005_pontoturistico_endereco.py  0006_pontoturistico_foto.py  0007_docidentificacao_pontoturistico_doc_identificacao.py
apps/enderecos/: apps.py
apps/enderecos/api/: serializers.py  viewsets.py
apps/enderecos/migrations/: 0001_initial.py
pontos_turisticos/: asgi.py  settings.py  urls.py  wsgi.py
