[tool.poetry]
name = "pontos-turisticos"
version = "0.1.0"
description = ""
authors = ["moreirak14 <kaiquemoreiracloud@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
